--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,15 @@
 ---
 language: python
+sudo: required
+dist: xenial
 
 python:
-- "3.5"
-- "3.6"
+  - "3.7"
+  - "3.6"
+  - "3.5"
+
+matrix:
+  fast_finish: true
 
 install:
 - pip install -r testing-requirements.txt
