--- a/setup.cfg
+++ b/setup.cfg
@@ -2,7 +2,7 @@
 name = roborio-pkgtools
 description = A pure python implementation of a NetConsole listener
 long_description = file: README.rst
-long_description_content_type = text/rst
+long_description_content_type = text/x-rst
 url = https://github.com/robotpy/pynetconsole
 license = ISC
 license_file = LICENSE
