Fix copy/paste error

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = roborio-pkgtools
+name = pynetconsole
 description = A pure python implementation of a NetConsole listener
 long_description = file: README.rst
 long_description_content_type = text/x-rst
